src/test/resources/validation/error/unknownEnum/schema.graphqls
type Query {
    customer(id: ID!): Film
}

type Film @table {
    id: ID!
 }

enum Rating @enum(enumReference: {name: "RATING_TEST"}) {
    G,
    PG,
    R,
}

enum Rating2 @enum(enumReference: {name: "UNKOWN_ENUM"}) {
    G,
    PG,
    R,
}